--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
   <body style="margin: 0px">
     <header
+      class="header"
       style="
         text-align: center;
         background-color: black;
@@ -47,13 +48,25 @@
     <div class="mainbox">
       <div class="areafourm">
         <div class="fourm">
+          <div style="position: relative; top: -20px">
+            <h1 style="color: white; position: relative; right: -50px">
+              Tell us about yourself
+            </h1>
+          </div>
           <form class="antiskew" action="/" method="GET">
             <label for="fname">First name:</label><br />
             <input
               type="text"
               id="fname"
               name="fname"
-              style="width: 500px; height: 25px; background-color: silver"
+              style="
+                width: 500px;
+                height: 25px;
+                background-color: #fe202d;
+
+                border: none;
+                border-bottom: 2px solid white;
+              "
             /><br /><br />
 
             <label for="lname">Last name:</label><br />
@@ -61,7 +74,14 @@
               type="text"
               id="lname"
               name="lname"
-              style="width: 500px; height: 25px; background-color: silver"
+              style="
+                width: 500px;
+                height: 25px;
+                background-color: #fe202d;
+
+                border: none;
+                border-bottom: 2px solid white;
+              "
             /><br /><br />
 
             <label for="email">EMAIL:</label><br />
@@ -69,7 +89,14 @@
               type="text"
               id="email"
               name="email"
-              style="width: 500px; height: 25px; background-color: silver"
+              style="
+                width: 500px;
+                height: 25px;
+                background-color: #fe202d;
+
+                border: none;
+                border-bottom: 2px solid white;
+              "
             /><br /><br />
 
             <label for="dateofbirth">date of birth:</label><br />
@@ -77,7 +104,14 @@
               type="text"
               id="dateofbirth"
               name="dateofbirth"
-              style="width: 500px; height: 25px; background-color: silver"
+              style="
+                width: 500px;
+                height: 25px;
+                background-color: #fe202d;
+
+                border: none;
+                border-bottom: 2px solid white;
+              "
             /><br /><br />
 
             <label for="contactnumber">Contact number:</label><br />
@@ -85,7 +119,13 @@
               type="text"
               id="contactnumber"
               name="contactnumber"
-              style="width: 500px; height: 25px; background-color: silver"
+              style="
+                width: 500px;
+                height: 25px;
+                background-color: #fe202d;
+                border: none;
+                border-bottom: 2px solid white;
+              "
             /><br /><br />
 
             <label for="music">Music choice:</label><br />
@@ -93,7 +133,14 @@
               type="text"
               id="music"
               name="music"
-              style="width: 500px; height: 25px; background-color: silver"
+              style="
+                width: 450px;
+                height: 25px;
+                background-color: #fe202d;
+
+                border: none;
+                border-bottom: 2px solid white;
+              "
             /><br /><br />
 
             <button type="submit" onclick="validation()">submit</button>
