--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               style="
                 width: 500px;
                 height: 25px;
-                background-color: #fe202d;
+                background-color: transparent;
 
                 border: none;
                 border-bottom: 2px solid white;
@@ -77,7 +77,7 @@
               style="
                 width: 500px;
                 height: 25px;
-                background-color: #fe202d;
+                background-color: transparent;
 
                 border: none;
                 border-bottom: 2px solid white;
@@ -92,7 +92,7 @@
               style="
                 width: 500px;
                 height: 25px;
-                background-color: #fe202d;
+                background-color: transparent;
 
                 border: none;
                 border-bottom: 2px solid white;
@@ -107,7 +107,7 @@
               style="
                 width: 500px;
                 height: 25px;
-                background-color: #fe202d;
+                background-color: transparent;
 
                 border: none;
                 border-bottom: 2px solid white;
@@ -122,7 +122,7 @@
               style="
                 width: 500px;
                 height: 25px;
-                background-color: #fe202d;
+                background-color: transparent;
                 border: none;
                 border-bottom: 2px solid white;
               "
@@ -136,7 +136,7 @@
               style="
                 width: 450px;
                 height: 25px;
-                background-color: #fe202d;
+                background-color: transparent;
 
                 border: none;
                 border-bottom: 2px solid white;
